fixed wrapping issue in column headers on resize

--- a/tabulator.less
+++ b/tabulator.less
@@ -48,6 +48,7 @@
 		color: @headerTextColor;
 		font-weight:bold;
 
+		white-space: nowrap;
 		overflow:visible;
 
 		-moz-user-select: none;
